--- a/src/views/join/dialogs/ManagedNewInviteUrl.html
+++ b/src/views/join/dialogs/ManagedNewInviteUrl.html
@@ -1,19 +1,19 @@
 <div class="ngdialog-message">
-	<h3>Invite Code</h3>
+	<h3 ng-bind="'PAGE.JOIN.INVITE_CODE'|translate"></h3>
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Room</label>
+		<label ng-bind="'PAGE.JOIN.FORM.ROOM'|translate" class="col-sm-2 control-label"></label>
 		<div class="col-sm-10">
 			<p ng-bind="invite.room" class="form-control-static"></p>
 		</div>
 	</div>
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Code</label>
+		<label ng-bind="'PAGE.JOIN.FORM.CODE'|translate" class="col-sm-2 control-label"></label>
 		<div class="col-sm-10">
 			<p ng-bind="invite.code" class="form-control-static"></p>
 		</div>
 	</div>
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Url</label>
+		<label ng-bind="'PAGE.JOIN.FORM.URL'|translate" class="col-sm-2 control-label"></label>
 		<div class="col-sm-10">
 			<p ng-bind="invite.url" class="form-control-static"></p>
 		</div>
