--- a/src/views/rooms/dialogs/ManagedSetIpcam.html
+++ b/src/views/rooms/dialogs/ManagedSetIpcam.html
@@ -1,31 +1,31 @@
 <div class="ngdialog-message">
-	<h3>Edit Ipcam</h3>
+	<h3 ng-bind="'PAGE.ROOMS.SET_IPCAM.TITLE'|translate"></h3>
 	<p>
 		<span ng-bind="::ngDialogData.room.name"></span>/<span ng-bind="::ngDialogData.ipcam.name"></span>
 	</p>
 </div>
 <form>
 	<div class="form-group">
-		<label>Name
+		<label><span ng-bind="'PAGE.ROOMS.SET_IPCAM.NAME'|translate"></span>
 			<input ng-model="ngDialogData.ipcam.name" required type="text" class="form-control">
 		</label>
 	</div>
 	<div class="form-group">
-		<label>Url
+		<label><span ng-bind="'PAGE.ROOMS.SET_IPCAM.URL'|translate"></span>
 			<input ng-model="ngDialogData.ipcam.url" required type="url" class="form-control">
 		</label>
 	</div>
 	<div class="checkbox">
 		<label>
 			<input ng-model="ngDialogData.ipcam.off" type="checkbox">
-			Turn Off </label>
+			<span ng-bind="'PAGE.ROOMS.SET_IPCAM.TURN_OFF'|translate"></span> </label>
 	</div>
 	<div class="ngdialog-buttons">
 		<button type="submit" class="ngdialog-button ngdialog-button-primary" ng-click="confirm(ngDialogData.ipcam)">
-			Confirm
+			<span ng-bind="'BTN.OK'|translate"></span>
 		</button>
 		<button type="button" class="ngdialog-button ngdialog-button-secondary" ng-click="closeThisDialog()">
-			Cancel
+			<span ng-bind="'BTN.NO'|translate"></span>
 		</button>
 	</div>
 </form>
