--- a/src/styles/rooms.css
+++ b/src/styles/rooms.css
@@ -1,7 +1,7 @@
 .sidebar {
-    position: fixed;
-    top: 0px;
-    color: #2C3E50;
+	position: fixed;
+	top: 0px;
+	color: #2C3E50;
 }
 
 video {
@@ -13,4 +13,12 @@ video {
 	right: 0;
 	bottom: 0;
 	left: 0;
+}
+
+.room-title {
+	display: inline-block;
+}
+
+.sidebar {
+	top: 100px;
 }
