--- a/src/views/join/dialogs/ManagedNewInviteUrl.html
+++ b/src/views/join/dialogs/ManagedNewInviteUrl.html
@@ -1,5 +1,7 @@
 <div class="ngdialog-message">
 	<h3 ng-bind="'PAGE.JOIN.INVITE_CODE'|translate"></h3>
+</div>
+<form>
 	<div class="form-group">
 		<label ng-bind="'PAGE.JOIN.FORM.ROOM'|translate" class="col-sm-2 control-label"></label>
 		<div class="col-sm-10">
@@ -18,4 +20,9 @@
 			<p ng-bind="invite.url" class="form-control-static"></p>
 		</div>
 	</div>
-</div>
+	<div class="ngdialog-buttons">
+		<button type="submit" class="ngdialog-button ngdialog-button-primary">
+			<span ng-bind="'BTN.OK'|translate"></span>
+		</button>
+	</div>
+</form>
