--- a/src/styles/rooms.css
+++ b/src/styles/rooms.css
@@ -8,7 +8,7 @@ video {
 	max-height: 100%;
 	max-width: 100%;
 	margin: auto;
-	position: absolute;
+	position: relative;
 	top: 0;
 	right: 0;
 	bottom: 0;
