--- a/src/views/rooms/main.html
+++ b/src/views/rooms/main.html
@@ -31,11 +31,11 @@
 					<a type="button" class="btn btn-link"
 					ng-click="connect(room,camera)" tooltip="{{'PAGE.ROOMS.CAM.PLAY'|translate}}"
 					> <h3 ng-attr-id="{{roomNavId+'camera'+$index}}" ng-bind="camera.name" class="room-title"></h3> <i
-					ng-if="!camera.opened && camera.online" class="fa fa-play-circle-o fa-3x"></i></a>
+					ng-if="!Streams.map[camera.id] && camera.online" class="fa fa-play-circle-o fa-3x"></i></a>
 					<div class="pull-right">
-						<button ng-if="camera.opened" ng-click="disconnect(room,camera)"
-						tooltip="{{'PAGE.ROOMS.CAM.STOP'|translate}}" type="button" class="btn btn-default">
-							<i class="fa fa-times-circle-o fa-3x"></i>
+						<button ng-if="Streams.map[camera.id]" ng-click="disconnect(room,camera)"
+						tooltip="{{'PAGE.ROOMS.CAM.STOP'|translate}}" type="button" class="btn btn-danger">
+							<i class="fa fa-times-circle-o fa-lg"></i>
 						</button>
 					</div>
 					<div class="pull-right"	ng-if="room.isOwner">
@@ -49,7 +49,7 @@
 						<small ng-if="camera.desc" am-time-ago="camera.desc"></small>
 					<p>
 				</div>
-				<video ng-if="Streams.map[camera.id]" rtc-video="Streams.map[camera.id]" autoplay></video>
+				<video ng-if="Streams.map[camera.id]" rtc-video="Streams.map[camera.id]" class="center-block" autoplay></video>
 			</div>
 		</div>
 	</div>
