--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -136,8 +136,8 @@
 .start-container {
   left: 0px;
   right: 0px;
-  top: 0px;
-  bottom: 20%;
+  top: 35%;
+  bottom: 0px;
   text-align: center;
   position: absolute;
   margin: auto;
@@ -146,7 +146,7 @@
   margin: auto;
   position: relative;
   bottom: 0px;
-  top: 50%;
+  top: 10%;
   clear: both;
   z-index: 100;
 }
