fix nav dialog,fix reg-room deps

--- a/src/views/join/dialogs/ManagedNewInviteUrl.html
+++ b/src/views/join/dialogs/ManagedNewInviteUrl.html
@@ -1,5 +1,5 @@
 <div class="ngdialog-message">
-	<h3 ng-bind="'PAGE.JOIN.INVITE_CODE'|translate"></h3>
+	<h3 sidenav-ignore ng-bind="'PAGE.JOIN.INVITE_CODE'|translate"></h3>
 </div>
 <form>
 	<div class="form-group">
