--- a/src/views/rooms/dialogs/ManagedSetIpcam.html
+++ b/src/views/rooms/dialogs/ManagedSetIpcam.html
@@ -1,5 +1,5 @@
 <div class="ngdialog-message">
-	<h3 ng-bind="'PAGE.ROOMS.SET_IPCAM.TITLE'|translate"></h3>
+	<h3 sidenav-ignore ng-bind="'PAGE.ROOMS.SET_IPCAM.TITLE'|translate"></h3>
 	<p>
 		<span ng-bind="::ngDialogData.room.name"></span>/<span ng-bind="::ngDialogData.ipcam.name"></span>
 	</p>
