--- a/src/views/rooms/dialogs/ManagedSetRoomName.html
+++ b/src/views/rooms/dialogs/ManagedSetRoomName.html
@@ -1,5 +1,5 @@
 <div class="ngdialog-message">
-	<h3 ng-bind="'PAGE.ROOMS.SET_ROOM.TITLE'|translate"></h3>
+	<h3 sidenav-ignore ng-bind="'PAGE.ROOMS.SET_ROOM.TITLE'|translate"></h3>
 	<p>
 		<span ng-bind="'PAGE.ROOMS.SET_ROOM.OLD_NAME_IS'|translate"></span><span ng-bind="ngDialogData.name"></span>
 	</p>
