--- a/src/views/share/dialogs/ConfirmLogoff.html
+++ b/src/views/share/dialogs/ConfirmLogoff.html
@@ -1,5 +1,5 @@
 <div class="ngdialog-message">
-	<h3 ng-bind="'PAGE.LOGOFF.CONFIRM'|translate"></h3>
+	<h3 sidenav-ignore ng-bind="'PAGE.LOGOFF.CONFIRM'|translate"></h3>
 </div>
 <p>
 	<span class="label label-danger" ng-bind="'PAGE.LOGOFF.WARNING'|translate"></span>
