--- a/src/styles/share.css
+++ b/src/styles/share.css
@@ -1,3 +1,6 @@
+a[ng-click], a[dropdown-toggle] {
+  cursor: pointer;
+}
 .ic-navbar-brand>img {
   top: -15px;
   position: relative;
@@ -5,5 +8,6 @@
   vertical-align: middle;
 }
 .ic-navbar-brand>span {
-  position: absolute;
+  position: relative;
+  top: -13px;
 }
