move regroom to client integration

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -3,7 +3,7 @@
 	list-style: outside none none;
 }
 .bs-oauth-list li {
-	width: 12.5%;
+	width: 140px;
 	font-size: 12px;
 	float: left;
 	height: 115px;
