--- a/src/views/rooms/main.html
+++ b/src/views/rooms/main.html
@@ -1,6 +1,6 @@
 <div ng-controller="RoomsMainCtrl">
 	<div class="col-md-10">
-		<div ng-init="roomNavId='room'+$index" ng-if="room.cameras" ng-repeat="room in CtrlClient.rooms" class="col-md-12">
+		<div ng-init="roomNavId='room'+$index" ng-repeat="room in CtrlClient.rooms" class="col-md-12">
 			<div class="page-header">
 				<div>
 					<a type="button" class="btn btn-link" ng-click="CtrlClient.chatTarget=room;visible=true" tooltip="{{'PAGE.ROOMS.CHAT.OPEN'|translate}}">
@@ -15,6 +15,10 @@
 						<button ng-click="Dialog.openManageNewInviteUrlDialog(room)" type="button" class="btn btn-default btn-success">
 							<i class="fa fa-share-alt"></i>
 							<span ng-bind="'PAGE.ROOMS.OPEN_INVITE_CODE'|translate"></span>
+						</button>
+						<button ng-click="Dialog.openManageNewIpcamDialog(room)" type="button" class="btn btn-default btn-success">
+							<i class="fa fa-plus"></i>
+							<span ng-bind="'PAGE.ROOMS.OPEN_NEW_IPCAM'|translate"></span>
 						</button>
 					</div>
 					<p>
@@ -39,6 +43,10 @@
 						<button type="button" class="btn btn-link" ng-disabled="camera.disabled" ng-click="Dialog.openManageIpcamDialog(room,camera)">
 							<i class="fa fa-pencil"></i>
 							<span ng-bind="'PAGE.ROOMS.OPEN_SET_CAM'|translate"></span>
+						</button>
+						<button type="button" class="btn btn-default btn-warning" ng-click="Dialog.openManageDelIpcamDialog(room,camera)">
+							<i class="fa fa-trash"></i>
+							<span ng-bind="'PAGE.ROOMS.OPEN_DEL_CAM'|translate"></span>
 						</button>
 					</div>
 					<p>
