--- a/src/views/join/dialogs/ManageNewInviteUrl.html
+++ b/src/views/join/dialogs/ManageNewInviteUrl.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div class="ngdialog-buttons">
-		<button type="submit" class="ngdialog-button ngdialog-button-primary">
+		<button type="submit" class="ngdialog-button ngdialog-button-primary" ng-click="closeThisDialog()">
 			<span ng-bind="'BTN.OK'|translate"></span>
 		</button>
 	</div>
