--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -132,21 +132,26 @@
     -webkit-animation-name: tada;
     animation-name: tada
   }
-
-.start-container {
-  left: 0px;
-  right: 0px;
-  top: 35%;
-  bottom: 0px;
-  text-align: center;
-  position: absolute;
-  margin: auto;
-}
-.start-btn {
-  margin: auto;
-  position: relative;
-  bottom: 0px;
-  top: 10%;
-  clear: both;
-  z-index: 100;
-}
+  .start-container {
+    left: 0px;
+    right: 0px;
+    top: 35%;
+    bottom: 0px;
+    text-align: center;
+    position: absolute;
+    margin: auto;
+  }
+  .start-btn {
+    margin: auto;
+    position: relative;
+    bottom: 0px;
+    top: 10%;
+    clear: both;
+    z-index: 100;
+  }
+  .index-desc {
+    z-index: 100;
+    position: relative;
+    font-size: 20px;
+    top: 15%;
+  }
