--- a/src/views/share/navbar.html
+++ b/src/views/share/navbar.html
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 			</button>
 			<a href="/" class="navbar-brand ic-navbar-brand">
-				<img src="/brand.png" />
+				<img src="[[cdnImg]]/brand.png" />
 				<span ng-bind="'PAGE_NAME.INDEX'|translate"></span>
 			</a>
 		</div>
