use http for all,fix explorer translate info

--- a/src/views/dl/body.html
+++ b/src/views/dl/body.html
@@ -36,12 +36,12 @@
           <p ng-bind="data.os"></p>
           <a ng-disabled="!data.url.bit32" ng-attr-href="{{data.url.bit32}}" target="_blank">
             <i class="fa fa-download"></i> 32
-            <span stranslate="PAGE.DOWNLOAD.BIT"></span>
+            <span translate="PAGE.DOWNLOAD.BIT"></span>
           </a>
           |
           <a ng-disabled="!data.url.bit64" ng-attr-href="{{data.url.bit64}}" target="_blank">
             <i class="fa fa-download"></i> 64
-            <span stranslate="PAGE.DOWNLOAD.BIT"></span>
+            <span translate="PAGE.DOWNLOAD.BIT"></span>
           </a>
         </div>
       </div>
