--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,157 +1,90 @@
-  html, body {
-    margin: 0;
-    /* 必要，否则纵向滚动条不会消失 */
-    height: 100%;
-    /* 必要，以便之后给container设置高度百分比 */
-  }
-  #container {
-    min-height: 100%;
-    /* 此属性需要doctype的支持，见第一行。 否则不会生效。在IE中，写height：100%就可以工作，但其他浏览器需要设置min-height。*/
-    position: relative;
-    /* 必要 */
-  }
-  #body {
-    padding-bottom: 50px;
-    /* 等于footer的高度 */
-    height: 200px;
-  }
-  #footer {
-    position: absolute;
-    /* 必要 */
-    bottom: 0;
-    /* 必要 */
-    height: 200px;
-    left: 20px;
-    right: 20px;
-  }
-  /*base code*/
-
-  .animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-  }
-  .animated.infinite {
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-  }
-  .animated.hinge {
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s;
-  }
-  /*the animation definition*/
-
-  @-webkit-keyframes shake {
-    0%, 100% {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0)
-    }
-    10%, 30%, 50%, 70%, 90% {
-      -webkit-transform: translate3d(-10px, 0, 0);
-      transform: translate3d(-10px, 0, 0)
-    }
-    20%, 40%, 60%, 80% {
-      -webkit-transform: translate3d(10px, 0, 0);
-      transform: translate3d(10px, 0, 0)
-    }
-  }
-  @keyframes shake {
-    0%, 100% {
-      -webkit-transform: translate3d(0, 0, 0);
-      -ms-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0)
-    }
-    10%, 30%, 50%, 70%, 90% {
-      -webkit-transform: translate3d(-10px, 0, 0);
-      -ms-transform: translate3d(-10px, 0, 0);
-      transform: translate3d(-10px, 0, 0)
-    }
-    20%, 40%, 60%, 80% {
-      -webkit-transform: translate3d(10px, 0, 0);
-      -ms-transform: translate3d(10px, 0, 0);
-      transform: translate3d(10px, 0, 0)
-    }
-  }
-  .shake {
-    -webkit-animation-name: shake;
-    animation-name: shake
-  }
-  /*the animation definition*/
-
-  @-webkit-keyframes tada {
-    0% {
-      -webkit-transform: scale3d(1, 1, 1);
-      transform: scale3d(1, 1, 1)
-    }
-    10%, 20% {
-      -webkit-transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
-      transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg)
-    }
-    30%, 50%, 70%, 90% {
-      -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg)
-    }
-    40%, 60%, 80% {
-      -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg)
-    }
-    100% {
-      -webkit-transform: scale3d(1, 1, 1);
-      transform: scale3d(1, 1, 1)
-    }
-  }
-  @keyframes tada {
-    0% {
-      -webkit-transform: scale3d(1, 1, 1);
-      -ms-transform: scale3d(1, 1, 1);
-      transform: scale3d(1, 1, 1)
-    }
-    10%, 20% {
-      -webkit-transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
-      -ms-transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
-      transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg)
-    }
-    30%, 50%, 70%, 90% {
-      -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-      -ms-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg)
-    }
-    40%, 60%, 80% {
-      -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-      -ms-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg)
-    }
-    100% {
-      -webkit-transform: scale3d(1, 1, 1);
-      -ms-transform: scale3d(1, 1, 1);
-      transform: scale3d(1, 1, 1)
-    }
-  }
-  .tada {
-    -webkit-animation-name: tada;
-    animation-name: tada
-  }
-  .start-container {
-    left: 0px;
-    right: 0px;
-    top: 35%;
-    bottom: 0px;
-    text-align: center;
-    position: absolute;
-    margin: auto;
-  }
-  .start-btn {
-    margin: auto;
-    position: relative;
-    bottom: 0px;
-    top: 10%;
-    clear: both;
-    z-index: 100;
-  }
-  .index-desc {
-    z-index: 100;
-    position: relative;
-    font-size: 20px;
-    top: 15%;
-  }
+body {
+  background-color: skyblue;
+  padding-top: 30px;
+}
+body .header-placeholder {
+  display: none;
+}
+h1 {
+  padding-top: 50px;
+  font-size: 70px;
+}
+h2 {
+  padding: 20px;
+  font-size: 30px;
+}
+body button.pb-pattern.btn-start {
+  margin-top: 70px;
+  margin-bottom: 20px;
+  text-align: center;
+  display: inline-block;
+  padding: 12px 25px;
+  font-size: 21px;
+  width: auto;
+  border: none;
+  box-shadow: 0 0 0px 8px rgba(0, 0, 0, 0.2);
+  background-color: lightcoral;
+  outline-color: 0px solid transparent !important;
+}
+body button.pb-pattern.btn-start:after {
+  background-size: 6px;
+  opacity: 0.3;
+}
+body button.pb-pattern.btn-start:hover {
+  outline-color: 0px solid transparent !important;
+}
+body button.pb-pattern.btn-start:hover:after {
+  -webkit-transition: background-size 0.1s ease-in-out;
+  -moz-transition: background-size 0.1s ease-in-out;
+  -ms-transition: background-size 0.1s ease-in-out;
+  -o-transition: background-size 0.1s ease-in-out;
+  transition: background-size 0.1s ease-in-out;
+  background-size: 12px;
+  box-shadow: 0 0 0px 8px rgba(0, 0, 0, 0.25);
+}
+body button.pb-pattern.btn-start:focus, body button.pb-pattern.btn-start:active {
+  outline-color: 0px solid transparent !important;
+}
+body button.pb-pattern.btn-start.dwnld {
+  background-color: lightskyblue;
+}
+body button.pb-pattern.btn-start a {
+  text-decoration: none;
+  color: inherit;
+}
+body nav a {
+  color: #222222;
+}
+body nav a:hover {
+  text-decoration: none;
+}
+.social-links {
+  font-size: 2em;
+}
+.section-inner {
+  padding: 50px 0;
+}
+.intro {
+  background-color: #3c9;
+}
+.intro:after {
+  background-size: 20px;
+  opacity: 0.75;
+}
+.unsupported {
+  background-color: #343434;
+}
+.feature {
+  background-color: #FF0;
+}
+.feature:after {
+  background-size: 5px;
+}
+.feature-text {
+  line-height: 14em;
+  font-size: 0.3em;
+}
+code {
+  display: block;
+  margin: 20px 0;
+}
