--- a/src/views/index/body.html
+++ b/src/views/index/body.html
@@ -1,27 +1,67 @@
-<div id="body">
+<div ng-controller="IndexCtrl">
+  <div class="intro pb-pattern cross-light-thin text-center">
+    <div class="section-inner">
+      <h1 translate="PAGE.INDEX.SITE_NAME"></h1>
+      <h2 translate="PAGE.INDEX.SITE_DESC"></h2>
+      <button class="pb-pattern o-lines-bold text-info btn-start" ng-click="start()">
+        <i class="fa fa-play faa-horizontal animated"></i>
+        <span translate="PAGE.INDEX.START"></span>
+      </button>
+      <div class="social-links">
+        <a href="https://facebook.com/tooltakes"><i class="fa fa-facebook-official" style="color:#3b5998"></i></a>
+        <a href="https://twitter.com/tooltakes"><i class="fa fa-twitter" style="color:#00aced"></i></a>
+        <a href="https://plus.google.com/103247955119341592162"><i class="fa fa-google-plus" style="color:#dd4b39"></i></a>
+        <a href="http://weibo.com/u/2643774475"><i class="fa fa-weibo" style="color:#e6162d"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="unsupported" ng-if="!Detector.isWebRTCSupported">
+    <div class="section-inner container text-center">
+      <div class="row text-danger" translate="PAGE.INDEX.UNSUPPORTED"></div>
+      <div class="row">
+        <div class="col-md-4">
+          <a target="_blank" href="http://www.firefox.com.cn/download" title="Firefox"><i class="fa fa-firefox fa-5x"></i></a>
+          <code translate="PAGE.INDEX.FIREFOX"></code>
+        </div>
+        <div class="col-md-4">
+          <a target="_blank" href="http://www.google.cn/intl/zh-CN/chrome/browser" title="Chrome"><i class="fa fa-chrome fa-5x"></i></a>
+          <code translate="PAGE.INDEX.CHROME"></code>
+        </div>
+        <div class="col-md-4">
+          <a target="_blank" href="http://www.opera.com/zh-cn/computer" title="Opera"><i class="fa fa-opera fa-5x"></i></a>
+          <code translate="PAGE.INDEX.OPERA"></code>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="feature pb-pattern cross-bold">
+    <div class="section-inner container text-center">
+      <div class="row">
+        <div class="col-md-4 col-sm-4 col-xs-12">
+          <span class="fa-stack fa-5x faa-parent animated-hover">
+            <i class="fa fa-dollar fa-stack-1x"></i>
+            <i class="fa fa-ban fa-stack-2x text-danger faa-horizontal"></i>
+            <span class="feature-text" translate="PAGE.INDEX.FEATURE.FREE"></span>
+          </span>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+          <span class="fa-stack fa-5x faa-parent animated-hover">
+            <i class="fa fa-cloud fa-stack-2x text-info"></i>
+            <i class="fa fa-lock fa-stack-1x faa-flash"></i>
+            <span class="feature-text" translate="PAGE.INDEX.FEATURE.SECURE"></span>
+          </span>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+          <span class="fa-stack fa-5x faa-parent animated-hover">
+            <i class="fa fa-square fa-stack-2x text-success faa-burst"></i>
+            <i class="fa fa-coffee fa-stack-1x"></i>
+            <span class="feature-text" translate="PAGE.INDEX.FEATURE.EASY"></span>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
-<footer id="footer" class="hidden-xs">
-  <div class="row" style="text-align: center;">
-    <div class="col-md-12" style="text-align: center;" ng-bind="'PAGE.INDEX.BROWSER_TIP'|translate"></div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-sm-6" style="text-align: center;">
-      <a target="_blank" href="http://www.firefox.com.cn/download/" title="Firefox">
-        <img src="http://goodluck.qiniudn.com/firefox_256x256.png" style="max-width: 100%;" width="60">
-      </a>
-      <p>
-        <a target="_blank" href="http://www.firefox.com.cn/download/" class="dl" ng-bind="'PAGE.INDEX.DOWNLOAD'|translate"></a>
-      </p>
-      <p ng-bind="'PAGE.INDEX.FIREFOX'|translate"></p>
-    </div>
-    <div class="col-md-6 col-sm-6" style="text-align: center;">
-      <a target="_blank" href="http://www.google.cn/intl/zh-CN/chrome/browser/" title="Chrome">
-        <img src="http://goodluck.qiniudn.com/chrome_256x256.png" style="max-width: 100%;" width="60">
-      </a>
-      <p>
-        <a target="_blank" href="http://www.google.com/chrome" class="dl" ng-bind="'PAGE.INDEX.DOWNLOAD'|translate"></a>
-      </p>
-      <p ng-bind="'PAGE.INDEX.CHROME'|translate"></p>
-    </div>
-  </div>
-</footer>
