--- a/src/views/rooms/dialogs/ManageSetIpcam.html
+++ b/src/views/rooms/dialogs/ManageSetIpcam.html
@@ -22,6 +22,12 @@
 	</div>
 	<div class="checkbox">
 		<label>
+			<input ng-model="ngDialogData.ipcam.audioOff" type="checkbox" name="audioOff">
+			<span ng-bind="'PAGE.ROOMS.SET_IPCAM.AUDIO_OFF'|translate"></span>
+		</label>
+	</div>
+	<div class="checkbox">
+		<label>
 			<input ng-model="ngDialogData.ipcam.off" type="checkbox" name="off">
 			<span ng-bind="'PAGE.ROOMS.SET_IPCAM.TURN_OFF'|translate"></span>
 		</label>
