--- a/src/views/rooms/dialogs/ManageDelIpcam.html
+++ b/src/views/rooms/dialogs/ManageDelIpcam.html
@@ -2,7 +2,7 @@
 	<h3 sidenav-ignore translate="PAGE.ROOMS.DEL_IPCAM.TITLE"></h3>
 	<p translate="PAGE.ROOMS.DEL_IPCAM.WARNING"></p>
 	<p>
-		<span ng-bind="::ngDialogData.room.name"></span>/
+		<span ng-bind="::ngDialogData.room.Name"></span>/
 		<span ng-bind="::ngDialogData.ipcam.id"></span>
 	</p>
 </div>
