--- a/src/views/rooms/dialogs/ManageDelRoom.html
+++ b/src/views/rooms/dialogs/ManageDelRoom.html
@@ -2,7 +2,7 @@
 	<h3 sidenav-ignore translate="PAGE.ROOMS.DEL_ROOM.TITLE"></h3>
 	<p translate="PAGE.ROOMS.DEL_ROOM.WARNING"></p>
 	<p>
-		<span ng-bind="::ngDialogData.room.name"></span>
+		<span ng-bind="::ngDialogData.room.Name"></span>
 	</p>
 </div>
 <form>
