--- a/src/views/rooms/dialogs/ManageNewIpcam.html
+++ b/src/views/rooms/dialogs/ManageNewIpcam.html
@@ -1,7 +1,7 @@
 <div class="ngdialog-message">
 	<h3 sidenav-ignore ng-bind="'PAGE.ROOMS.NEW_IPCAM.TITLE'|translate"></h3>
 	<p>
-		<span ng-bind="::ngDialogData.room.name"></span>/
+		<span ng-bind="::ngDialogData.room.Name"></span>/
 		<span ng-bind="ngDialogData.ipcam.id"></span>
 	</p>
 </div>
