--- a/src/styles/share.css
+++ b/src/styles/share.css
@@ -1,8 +1,34 @@
 body {
   padding-top: 50px;
 }
+.header-placeholder {
+  height: 50px;
+}
 a[ng-click], a[dropdown-toggle] {
   cursor: pointer;
+}
+.form-group label {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .visible-xs.collapse.in {
+    display: block !important;
+  }
+  .visible-xs.collapse {
+    display: none !important;
+  }
+}
+.navbar .collapse {
+  border-top: 1px solid #e7e7e7;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+[ac-chart] {
+  float: left;
+  height: 200px;
+  margin: 5% 1%;
 }
 .text-center {
   text-align: center;
