--- a/src/views/rooms/dialogs/ManageSetRoomName.html
+++ b/src/views/rooms/dialogs/ManageSetRoomName.html
@@ -2,7 +2,7 @@
 	<h3 sidenav-ignore ng-bind="'PAGE.ROOMS.SET_ROOM.TITLE'|translate"></h3>
 	<p>
 		<span ng-bind="'PAGE.ROOMS.SET_ROOM.OLD_NAME_IS'|translate"></span>
-		<span ng-bind="ngDialogData.name"></span>
+		<span ng-bind="ngDialogData.Name"></span>
 	</p>
 </div>
 <form>
@@ -10,7 +10,7 @@
 		<label>
 			<span ng-bind="'PAGE.ROOMS.SET_ROOM.NEW_NAME'|translate"></span>
 			<span class="text-danger" ng-show="!confirmValue">*</span>
-			<input name="name" ng-maxlength="120" ng-model="confirmValue" type="text" class="form-control" placeholder="name" required>
+			<input name="Name" ng-maxlength="120" ng-model="confirmValue" type="text" class="form-control" placeholder="name" required>
 		</label>
 	</div>
 	<div class="ngdialog-buttons">
